@@ -2,6 +2,9 @@
 
 {{$NEXT}}
 
+  * Document %hash->filter_each to make it official.
+
+
 1.024 2016-10-12T21:00:44Z
 
  * ->filter and ->filter_by now takes a dwim predicate
